--- a/Custom Campaign UIs/RaxiaV2.css
+++ b/Custom Campaign UIs/RaxiaV2.css
@@ -821,6 +821,10 @@ opacity: 0.7;
     section#chat {
         opacity: 1;
     }
+    #sidebar-tabs > .collapse{
+        min-width: 2rem;
+        width: 2rem;
+    }
     .window-app {
         filter: opacity(1);
         max-width: 100% !important;
